2011-07-12  Adam Roben  <aroben@apple.com>

        Unreviewed, rolling out r90811.
        http://trac.webkit.org/changeset/90811
        https://bugs.webkit.org/show_bug.cgi?id=61025

        Several svg tests failing assertions beneath
        SVGSMILElement::findInstanceTime

        * svg/animation/SVGSMILElement.cpp:
        (WebCore::SVGSMILElement::findInstanceTime):

2011-07-12  Oliver Varga  <Varga.Oliver@stud.u-szeged.hu>

        Reviewed by Nikolas Zimmermann.

        Speed up SVGSMILElement::findInstanceTime.
        https://bugs.webkit.org/show_bug.cgi?id=61025

        Replace the linear search to binary search on ordered list because
        the previous searches from the beginning was not efficient.
        Out of index error fixed by Renata Hodovan.

        No new tests this is only a performance tweak.

        * svg/animation/SVGSMILElement.cpp:
        (WebCore::extractTimeFromVector):
        (WebCore::SVGSMILElement::findInstanceTime):

2011-07-11  Zeng Huiqing  <huiqing.zeng@intel.com>

        Optimize HTMLInputElement::updateCheckedRadioButtons
        https://bugs.webkit.org/show_bug.cgi?id=62840

        Reviewed by Kent Tamura.

        No new tests.

        * dom/Document.h:
        (WebCore::Document::getFormElements):
        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::updateCheckedRadioButtons):
        (WebCore::HTMLInputElement::setChecked):

2011-06-23  Pratik Solanki  <psolanki@apple.com>

        Reviewed by David Kilzer.

        Add NSURLRequest wrapper in ResourceRequest when USE(CFNETWORK) is enabled
        https://bugs.webkit.org/show_bug.cgi?id=63276

        When USE(CFNETWORK) is enabled on Mac, keep an NSURLRequest object along with the
        CFURLRequestRef so that WebKit can continue using the NSURLRequest.

        No new tests because no change in functionality and option is not enabled on Mac.

        * platform/network/cf/ResourceRequest.h: